--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.leapmotion</groupId>
+			<artifactId>leap</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.datafx</groupId>
 			<artifactId>flow</artifactId>
 			<version>8.0b9</version>
@@ -43,4 +49,11 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>local-leap-motion-repo</id>
+			<url>file://${basedir}/lib/</url>
+		</repository>
+	</repositories>
 </project>
